@@ -171,7 +171,7 @@ T_322propedit_track_headers:785209f2dc35ad6177bea2ca6e43198f-e19a10295b0635a0581
 T_323propedit_segment_info:785209f2dc35ad6177bea2ca6e43198f-2df9da2d502a7d5ad914966c27393844-c65579659de3fb44c74aed6965b5ce2e:passed:20111203-152845:0.320514946
 T_324propedit_chapters:785209f2dc35ad6177bea2ca6e43198f-a9255d40de93e2731aaead0a746e582f-a6d99a5e779aa1c65ba4d03597754d37-ae788bbd0580dd01d10672a46e3be84d-2a53e52d0e3b13d37f5e9f411a9e74eb-b6aafbfe2bc4902f3187031a71730f8d-ee5f4977886284f0d97519895fbab9d8-48614f8c72edb5d3e23115e1998f5997-11d7efba28fe0cd85b03919dd87324e9-d41d8cd98f00b204e9800998ecf8427e:passed:20111203-154502:0.598148676
 T_325propedit_tags:785209f2dc35ad6177bea2ca6e43198f-26ad4ab0491d76d9fb6f57b4a4b35400-e58a5937ac6e0dc71d6c8264c53535be-52322241c33de4f7b56ede7a4764f72f-e58a5937ac6e0dc71d6c8264c53535be-52322241c33de4f7b56ede7a4764f72f-e26ce3a9725c74e16b5be99a5a917ae2-591a65deb231cb0150a4da224d5f3415-8aa2fda41ba5c0cfe6fec3d46611896c-438f0a8ce757e03b77c084bd593cb196-8aa2fda41ba5c0cfe6fec3d46611896c-438f0a8ce757e03b77c084bd593cb196-1e335b1d4a8ed48cbaa4efcffecdba28-5a8f05d63ffe9d53046abf40ec30e42a-54597c44d0938662d716edd21e4d6c68-d41d8cd98f00b204e9800998ecf8427e:passed:20111203-160727:1.442408716
-T_326mpeg_ps_mpeg_audio_layer4:0982b5145931bd432a2cccc428d78b90:passed:20111207-224511:2.60761265
+T_326mpeg_ps_mpeg_audio_layer4:9fab097bab791a737d7d004b6fe46a0f:passed:20111207-224511:2.60761265
 T_327vp8_frame_type:69725de2b6569734a3b1f955b4775e74:passed:20111207-233304:0.214913089
 T_328dts_detected_as_ac3:dfac59530d2d96ab9f41465fdc3931fd:passed:20111229-192324:0.053131334
 T_329X_timecodes_v2:dadc36ce79c1c4b281f8f1f865746598-049cdc2d9226fac8c61d193d803bfc1f-3720aac3f16b66ec3308ffa7bf913c6e-6469e2522a4b48b7b20bae93f5d9086d-1ff091abfcb0938d6ac7fd0495e899b3-049cdc2d9226fac8c61d193d803bfc1f-d172a9340cbf2802690479e396879d1e-bf76c5886cc7c18cc7e6ee796c3406b4-b3f9d126c31505c22f292a1d2bdffba2-4bd97467fac0ac0b561d68b8b15a79dd:passed:20120105-202451:2.051321822
@@ -186,7 +186,7 @@ T_337vc1_es_sequence_header_not_at_start:bf36604ea040b1ca8c52922ae369fb1b:passed
 T_338h264_width_height_pixl_format_non_420:cb35a7cad2ce221dafffbf8afa7989a2-ok:passed:20120222-153143:1.279671419
 T_339eac3_dependent_frames:6eedc000ab59cf3fd8bfbe114b485bf1:passed:20120226-133623:0.151339401
 T_340m2ts_interlaced_h264_timecode_every_second_frame:a6fc85148aab00d214a676774141c47b:passed:20120304-163131:17.958948376
-T_341vob_interlaced_h264:b43913bd077709dab758899bcf61c2ba:passed:20120304-163313:3.966318687
+T_341vob_interlaced_h264:3ba26eb76df283b1f0bf1d5c5a53d801:passed:20120304-163313:3.966318687
 T_342m2ts_interlaced_h264_from_arte:0becb07f612d9377499e78fd6758efc8:passed:20120304-165917:3.86679733
 T_343m2ts_interlaced_h264_match_of_the_day:4e2c97de9b072519c3e33f132518ec23:passed:20120304-171453:2.873804415
 T_344microdvd_recognition:ok:passed:20120304-175209:0.082792556
@@ -212,3 +212,4 @@ T_363srt_colon_decimal_separator:b911ac82752b41c46e0a8e550f6df0a8:passed:2012052
 T_364qtmp4_track_with_empty_chunkmap_table:525b2e6e666a21e66e31c2e8106e1817:passed:20120605-223925:0.081185075
 T_365qtmp4_constant_sample_size:adad6bd2e89cf83b4e3857427072b7df-10aaca3e180b5e2a2757c52a30d59d33:passed:20120605-230823:0.321147694
 T_366srt_with_space_in_timecode_arrow:81ad6ecc7cd81ba416c5bd670bb40dfd:passed:20120801-132204:0.143148427
+T_367vob_80ms_delay_by_b_frames:927f084d9fb2d805f11774c257afc4a4-96ff0dbb8de05730c2deb0b0556a78ad:passed:20120801-182507:0.080617521
